- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.9.0 Beta 3
- 
    None
- 
    Debian GNU/Linux experimental: ppc64, mips, s390x
qmlcachegen.cpp tries to use QV4::JIT::createISelForArchitecture function, however the source code of that function is inside #if ENABLE(ASSEMBLER) block, so it is not built on architectures without JIT support.
So on such architectures we get this compilation error:
qmlcachegen.cpp:330: error: undefined reference to 'QV4::JIT::createISelForArchitecture(QString const&)'
The full build logs can be seen here.
I think either there should be some fallback code for architectures without JIT support, or qmlcachegen should not be built on such architectures at all.
Cc shausman because he was the author of https://codereview.qt-project.org/183950.
- duplicates
- 
                    QTBUG-60501 Cannot compile QT on Raspi 3 with Raspbian -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-60597 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 193778,3 | Prospective build fix for architectures where we don't support the JIT | 5.9.0 | qt/qtdeclarative | Status: MERGED | +2 | 0 |