Prospective build fix for architectures where we don't support the JIT

Always export the isel factory method for qmlcachegen, so that we can
link.

Task-number: QTBUG-60597
Change-Id: Ia348ee5dfe0892878e8fce6c8afd30bb8eb54a51
Reviewed-by: Dmitry Shachnev <mitya57@gmail.com>
Reviewed-by: Robin Burchell <robin.burchell@crimson.no>